Date: 28. 02. 2025.
  Changes:
    - Add the long range wireless combinator. This combinator has a channel name. \
      All combinators with the same channel are connected together with red and green wires (selectable).
    - Add a GUI panel to display the signals in channels. Add a button in toolbar to display GUI panel.
    - Fix meta-combinator
    - Manage channel in parameter GUI
---------------------------------------------------------------------------------------------------
Version: 2.0.14
Date: 19. 02. 2025.
  Bugfixes:
    - Fix blueprint redefinition.
---------------------------------------------------------------------------------------------------
Version: 2.0.13
Date: 25. 12. 2024.
  Changes:
    - Add ru locale, thanks to MikdadAgasiev
  Bugfixes:
    - Fix processor create/remove on space platform
---------------------------------------------------------------------------------------------------
Version: 2.0.12
Date: 08. 12. 2024.
  Bugfixes:
    - Clean orphan combinators in packed mode
---------------------------------------------------------------------------------------------------
Version: 2.0.11
Date: 25. 11. 2024.
  Bugfixes:
    - Fix crash on undo
  Changes:
    - Add control key to exit all processors (Control + "Exit editor" button)
---------------------------------------------------------------------------------------------------
Version: 2.0.10
Date: 22. 11. 2024.
  Bugfixes:
    - Fix crash when putting a processor on a space station
---------------------------------------------------------------------------------------------------
Version: 2.0.9
Date: 21. 11. 2024.
  Bugfixes:
    - Fix edition of processor in remote mode and packed mode. 
---------------------------------------------------------------------------------------------------
Version: 2.0.8
Date: 13. 11. 2024.
  Bugfixes:
    - Fix crash on exiting editor
---------------------------------------------------------------------------------------------------
Version: 2.0.7