@@ -7,6 +7,7 @@ Date: 28. 02. 2025.
     - Add a GUI panel to display the signals in channels. Add a button in toolbar to display GUI panel.
     - Fix meta-combinator
     - Manage channel in parameter GUI
+    - Fix planet import change in group of a request on a space hub
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.14
 Date: 19. 02. 2025.
